fix(spreadsheet): make drag handle to be visible in all cases telerik/kendo-ui-core#3254

--- a/packages/bootstrap/scss/spreadsheet/_theme.scss
+++ b/packages/bootstrap/scss/spreadsheet/_theme.scss
@@ -42,7 +42,7 @@
     .k-spreadsheet-selection {
         border-color: $selected-bg;
         background-color: rgba( $selected-bg, .25 );
-        box-shadow: inset 0 0 0 1px $panel-bg, 0 0 0 1px $selected-bg;
+        box-shadow: inset 0 0 0 1px $selected-bg;
     }
 
     .k-spreadsheet .k-single-selection::after {
@@ -50,14 +50,26 @@
         background-color: $selected-bg;
     }
     .k-spreadsheet-active-cell {
-        border-color: $selected-bg;
+        box-shadow: inset 0 0 0 1px $selected-bg;
         background-color: $panel-bg;
+
+        &.k-right {
+            box-shadow: inset 0 0 0 1px $selected-bg, inset -1px 0 0 1px $selected-bg;
+        }
+
+        &.k-bottom.k-right {
+            box-shadow: inset 0 0 0 1px $selected-bg, inset -1px -1px 0 1px $selected-bg;
+        }
+
+        &.k-bottom.k-left {
+            box-shadow: inset 0 0 0 1px $selected-bg, inset 0 -1px 0 1px $selected-bg;
+        }
     }
 
     .k-spreadsheet .k-auto-fill {
         border-color: $selected-bg;
         background-color: rgba( $selected-bg, .25 );
-        box-shadow: inset 0 0 0 1px $panel-bg, 0 0 0 1px $selected-bg;
+        box-shadow: inset 0 0 0 1px $selected-bg;
     }
     .k-spreadsheet .k-auto-fill-punch {
         background-color: rgba( $panel-bg, .5 );
